2003-10-10  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* combine.c (distribute_links): Properly test for REG being set.

	* config/alpha/alpha.c (alpha_expand_block_mode): Don't use
	gen_lowpart and company except for REG.

2003-10-10  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* pa64-hpux.h (LINK_SPEC): Use `-z' option with HP ld.

2003-10-10  Nathanael Nerode  <neroden@gcc.gnu.org>

	* config.gcc (mips*-*-netbsd*): Remove content-free line.

2003-10-10  Herman A.J. ten Brugge <hermantenbrugge@home.nl>

	* gcov-io.h: Check BITS_PER_UNIT when defining gcov_unsigned_t,
	gcov_position_t and gcov_type.

2003-10-09  Kaz Kojima  <kkojima@gcc.gnu.org>

	* configure.in (HAVE_AS_TLS): Add sh-*-* and sh[34]*-*-* cases.
	* configure: Regenerate.

2003-10-09  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.md (define_asm_attributes): Specify
	the length of an asm insn more precisely.

2003-10-09  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* config/mips/iris6.h (SUBTARGET_CPP_SPEC): Define.

2003-10-09  Bob Wilson  <bob.wilson@acm.org>

	* config/xtensa/xtensa.c (xtensa_dbx_register_number): Change first
	FP register number to 48 and MAC16 accumulator to 0x210.

2003-10-09  Nathanael Nerode  <neroden@gcc.gnu.org>

	* config.gcc: Remove redundant thread_file setting clauses for
	various *-*-linux* targets.

2003-10-09  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.md (define_asm_attributes): New.

2003-10-09  Roger Sayle  <roger@eyesopen.com>

	* optabs.c (prepare_float_lib_cmp): Always attach a REG_EQUAL note
	to the comparison, as emit_libcall_block calls copy_rtx on equiv.

2003-10-09  Dorit Naishlos  <dorit@il.ibm.com>

	* haifa-sched.c (ok_for_early_schedule): New function.
	(early_queue_to_ready): New function. 
	(schedule_block): Allow early removal of insns from Q.
	(schedule_insn): Update INSN_TICK in case of premature
	issue.
	* common.opt (sched_stalled_insns): New flag.
	(sched_stalled_insns_dep): New flag.